dataset1235/2025-2/1955397009/users/4018420266/executions/3239899347_1128387558.log
== SUBMISSION (2025-08-28 12:52:11)
-- CODE: 
input// valor Em Dolar Neozelandes x 2.96// float

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
-- ERROR:
File "XXXX", line 1
    input// valor Em Dolar Neozelandes x 2.96// float
                  ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
-- ERROR:
File "XXXX", line 1
    input// valor Em Dolar Neozelandes x 2.96// float
                  ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
-- ERROR:
File "XXXX", line 1
    input// valor Em Dolar Neozelandes x 2.96// float
                  ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
-- ERROR:
File "XXXX", line 1
    input// valor Em Dolar Neozelandes x 2.96// float
                  ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
-- ERROR:
File "XXXX", line 1
    input// valor Em Dolar Neozelandes x 2.96// float
                  ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
-- ERROR:
File "XXXX", line 1
    input// valor Em Dolar Neozelandes x 2.96// float
                  ^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 12:37:34)
-- CODE: 
float// valorEmReais= 2.96


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
-- ERROR:
File "XXXX", line 1
    float// valorEmReais= 2.96
    ^^^^^^^^^^^^^^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
-- ERROR:
File "XXXX", line 1
    float// valorEmReais= 2.96
    ^^^^^^^^^^^^^^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
-- ERROR:
File "XXXX", line 1
    float// valorEmReais= 2.96
    ^^^^^^^^^^^^^^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
-- ERROR:
File "XXXX", line 1
    float// valorEmReais= 2.96
    ^^^^^^^^^^^^^^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
-- ERROR:
File "XXXX", line 1
    float// valorEmReais= 2.96
    ^^^^^^^^^^^^^^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
-- ERROR:
File "XXXX", line 1
    float// valorEmReais= 2.96
    ^^^^^^^^^^^^^^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 12:35:18)
-- CODE: 
input= valorEmNeozelandes x 2.96

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
-- ERROR:
File "XXXX", line 1
    input= valorEmNeozelandes x 2.96
                              ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
-- ERROR:
File "XXXX", line 1
    input= valorEmNeozelandes x 2.96
                              ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
-- ERROR:
File "XXXX", line 1
    input= valorEmNeozelandes x 2.96
                              ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
-- ERROR:
File "XXXX", line 1
    input= valorEmNeozelandes x 2.96
                              ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
-- ERROR:
File "XXXX", line 1
    input= valorEmNeozelandes x 2.96
                              ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
-- ERROR:
File "XXXX", line 1
    input= valorEmNeozelandes x 2.96
                              ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 12:47:51)
-- CODE: 
input // valorEmDolarNeozelandes x 2.96 float //


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
-- ERROR:
File "XXXX", line 1
    input // valorEmDolarNeozelandes x 2.96 float //
                                     ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
-- ERROR:
File "XXXX", line 1
    input // valorEmDolarNeozelandes x 2.96 float //
                                     ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
-- ERROR:
File "XXXX", line 1
    input // valorEmDolarNeozelandes x 2.96 float //
                                     ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
-- ERROR:
File "XXXX", line 1
    input // valorEmDolarNeozelandes x 2.96 float //
                                     ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
-- ERROR:
File "XXXX", line 1
    input // valorEmDolarNeozelandes x 2.96 float //
                                     ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
-- ERROR:
File "XXXX", line 1
    input // valorEmDolarNeozelandes x 2.96 float //
                                     ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 12:40:52)
-- CODE: 
input//valorEmReais= 2.96
input// ValorEmDolarNeozelandes x 2.96 round(x,n)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
-- ERROR:
File "XXXX", line 1
    input//valorEmReais= 2.96
    ^^^^^^^^^^^^^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
-- ERROR:
File "XXXX", line 1
    input//valorEmReais= 2.96
    ^^^^^^^^^^^^^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
-- ERROR:
File "XXXX", line 1
    input//valorEmReais= 2.96
    ^^^^^^^^^^^^^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
-- ERROR:
File "XXXX", line 1
    input//valorEmReais= 2.96
    ^^^^^^^^^^^^^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
-- ERROR:
File "XXXX", line 1
    input//valorEmReais= 2.96
    ^^^^^^^^^^^^^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
-- ERROR:
File "XXXX", line 1
    input//valorEmReais= 2.96
    ^^^^^^^^^^^^^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:31:12)
-- CODE: 

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
---- user output:
None
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
---- user output:
None
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
---- user output:
None
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
---- user output:
None
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
---- user output:
None
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 12:52:48)
-- CODE: 
\\input// valor Em Dolar Neozelandes x 2.96 //float//


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
-- ERROR:
File "XXXX", line 1
    \\input// valor Em Dolar Neozelandes x 2.96 //float//
     ^
SyntaxError: unexpected character after line continuation character
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
-- ERROR:
File "XXXX", line 1
    \\input// valor Em Dolar Neozelandes x 2.96 //float//
     ^
SyntaxError: unexpected character after line continuation character
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
-- ERROR:
File "XXXX", line 1
    \\input// valor Em Dolar Neozelandes x 2.96 //float//
     ^
SyntaxError: unexpected character after line continuation character
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
-- ERROR:
File "XXXX", line 1
    \\input// valor Em Dolar Neozelandes x 2.96 //float//
     ^
SyntaxError: unexpected character after line continuation character
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
-- ERROR:
File "XXXX", line 1
    \\input// valor Em Dolar Neozelandes x 2.96 //float//
     ^
SyntaxError: unexpected character after line continuation character
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
-- ERROR:
File "XXXX", line 1
    \\input// valor Em Dolar Neozelandes x 2.96 //float//
     ^
SyntaxError: unexpected character after line continuation character
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 12:34:50)
-- CODE: 
float= valorEmNeozelandes x 2.96

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
-- ERROR:
File "XXXX", line 1
    float= valorEmNeozelandes x 2.96
                              ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
-- ERROR:
File "XXXX", line 1
    float= valorEmNeozelandes x 2.96
                              ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
-- ERROR:
File "XXXX", line 1
    float= valorEmNeozelandes x 2.96
                              ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
-- ERROR:
File "XXXX", line 1
    float= valorEmNeozelandes x 2.96
                              ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
-- ERROR:
File "XXXX", line 1
    float= valorEmNeozelandes x 2.96
                              ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
-- ERROR:
File "XXXX", line 1
    float= valorEmNeozelandes x 2.96
                              ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:27:23)
-- CODE: 

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
---- user output:
None
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
---- user output:
None
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
---- user output:
None
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
---- user output:
None
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
---- user output:
None
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 12:30:15)
-- CODE: 

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
---- user output:
None
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
---- user output:
None
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
---- user output:
None
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
---- user output:
None
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
---- user output:
None
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
---- user output:
None
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 12:40:56)
-- CODE: 
input//valorEmReais= 2.96
input// ValorEmDolarNeozelandes x 2.96 round(x,n)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
-- ERROR:
File "XXXX", line 1
    input//valorEmReais= 2.96
    ^^^^^^^^^^^^^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
-- ERROR:
File "XXXX", line 1
    input//valorEmReais= 2.96
    ^^^^^^^^^^^^^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
-- ERROR:
File "XXXX", line 1
    input//valorEmReais= 2.96
    ^^^^^^^^^^^^^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
-- ERROR:
File "XXXX", line 1
    input//valorEmReais= 2.96
    ^^^^^^^^^^^^^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
-- ERROR:
File "XXXX", line 1
    input//valorEmReais= 2.96
    ^^^^^^^^^^^^^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
-- ERROR:
File "XXXX", line 1
    input//valorEmReais= 2.96
    ^^^^^^^^^^^^^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 12:37:56)
-- CODE: 
input//valorEmReais= 2.96


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
-- ERROR:
File "XXXX", line 1
    input//valorEmReais= 2.96
    ^^^^^^^^^^^^^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
-- ERROR:
File "XXXX", line 1
    input//valorEmReais= 2.96
    ^^^^^^^^^^^^^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
-- ERROR:
File "XXXX", line 1
    input//valorEmReais= 2.96
    ^^^^^^^^^^^^^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
-- ERROR:
File "XXXX", line 1
    input//valorEmReais= 2.96
    ^^^^^^^^^^^^^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
-- ERROR:
File "XXXX", line 1
    input//valorEmReais= 2.96
    ^^^^^^^^^^^^^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
-- ERROR:
File "XXXX", line 1
    input//valorEmReais= 2.96
    ^^^^^^^^^^^^^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 12:27:05)
-- CODE: 

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
---- user output:
None
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
---- user output:
None
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
---- user output:
None
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
---- user output:
None
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
---- user output:
None
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
---- user output:
None
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 12:47:16)
-- CODE: 
input/ valorEmDolarNeozelandes x 2.96 /float


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
-- ERROR:
File "XXXX", line 1
    input/ valorEmDolarNeozelandes x 2.96 /float
                                   ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
-- ERROR:
File "XXXX", line 1
    input/ valorEmDolarNeozelandes x 2.96 /float
                                   ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
-- ERROR:
File "XXXX", line 1
    input/ valorEmDolarNeozelandes x 2.96 /float
                                   ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
-- ERROR:
File "XXXX", line 1
    input/ valorEmDolarNeozelandes x 2.96 /float
                                   ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
-- ERROR:
File "XXXX", line 1
    input/ valorEmDolarNeozelandes x 2.96 /float
                                   ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
-- ERROR:
File "XXXX", line 1
    input/ valorEmDolarNeozelandes x 2.96 /float
                                   ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 12:52:43)
-- CODE: 
input// valor Em Dolar Neozelandes x 2.96 //float//


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
-- ERROR:
File "XXXX", line 1
    input// valor Em Dolar Neozelandes x 2.96 //float//
                  ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
-- ERROR:
File "XXXX", line 1
    input// valor Em Dolar Neozelandes x 2.96 //float//
                  ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
-- ERROR:
File "XXXX", line 1
    input// valor Em Dolar Neozelandes x 2.96 //float//
                  ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
-- ERROR:
File "XXXX", line 1
    input// valor Em Dolar Neozelandes x 2.96 //float//
                  ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
-- ERROR:
File "XXXX", line 1
    input// valor Em Dolar Neozelandes x 2.96 //float//
                  ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
-- ERROR:
File "XXXX", line 1
    input// valor Em Dolar Neozelandes x 2.96 //float//
                  ^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 12:52:37)
-- CODE: 
input// valor Em Dolar Neozelandes x 2.96//float//


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
-- ERROR:
File "XXXX", line 1
    input// valor Em Dolar Neozelandes x 2.96//float//
                  ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
-- ERROR:
File "XXXX", line 1
    input// valor Em Dolar Neozelandes x 2.96//float//
                  ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
-- ERROR:
File "XXXX", line 1
    input// valor Em Dolar Neozelandes x 2.96//float//
                  ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
-- ERROR:
File "XXXX", line 1
    input// valor Em Dolar Neozelandes x 2.96//float//
                  ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
-- ERROR:
File "XXXX", line 1
    input// valor Em Dolar Neozelandes x 2.96//float//
                  ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
-- ERROR:
File "XXXX", line 1
    input// valor Em Dolar Neozelandes x 2.96//float//
                  ^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 12:28:03)
-- CODE: 

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
---- user output:
None
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
---- user output:
None
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
---- user output:
None
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
---- user output:
None
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
---- user output:
None
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
---- user output:
None
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 12:57:07)
-- CODE: 
((input valor Em Dolar Neozelandes= 5x 2.96))


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
-- ERROR:
File "XXXX", line 1
    ((input valor Em Dolar Neozelandes= 5x 2.96))
                                        ^
SyntaxError: invalid decimal literal
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
-- ERROR:
File "XXXX", line 1
    ((input valor Em Dolar Neozelandes= 5x 2.96))
                                        ^
SyntaxError: invalid decimal literal
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
-- ERROR:
File "XXXX", line 1
    ((input valor Em Dolar Neozelandes= 5x 2.96))
                                        ^
SyntaxError: invalid decimal literal
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
-- ERROR:
File "XXXX", line 1
    ((input valor Em Dolar Neozelandes= 5x 2.96))
                                        ^
SyntaxError: invalid decimal literal
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
-- ERROR:
File "XXXX", line 1
    ((input valor Em Dolar Neozelandes= 5x 2.96))
                                        ^
SyntaxError: invalid decimal literal
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
-- ERROR:
File "XXXX", line 1
    ((input valor Em Dolar Neozelandes= 5x 2.96))
                                        ^
SyntaxError: invalid decimal literal
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 12:34:54)
-- CODE: 
float= valorEmNeozelandes x 2.96

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
-- ERROR:
File "XXXX", line 1
    float= valorEmNeozelandes x 2.96
                              ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
-- ERROR:
File "XXXX", line 1
    float= valorEmNeozelandes x 2.96
                              ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
-- ERROR:
File "XXXX", line 1
    float= valorEmNeozelandes x 2.96
                              ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
-- ERROR:
File "XXXX", line 1
    float= valorEmNeozelandes x 2.96
                              ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
-- ERROR:
File "XXXX", line 1
    float= valorEmNeozelandes x 2.96
                              ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
-- ERROR:
File "XXXX", line 1
    float= valorEmNeozelandes x 2.96
                              ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 12:40:58)
-- CODE: 
input//valorEmReais= 2.96
input// ValorEmDolarNeozelandes x 2.96 round(x,n)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
-- ERROR:
File "XXXX", line 1
    input//valorEmReais= 2.96
    ^^^^^^^^^^^^^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
-- ERROR:
File "XXXX", line 1
    input//valorEmReais= 2.96
    ^^^^^^^^^^^^^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
-- ERROR:
File "XXXX", line 1
    input//valorEmReais= 2.96
    ^^^^^^^^^^^^^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
-- ERROR:
File "XXXX", line 1
    input//valorEmReais= 2.96
    ^^^^^^^^^^^^^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
-- ERROR:
File "XXXX", line 1
    input//valorEmReais= 2.96
    ^^^^^^^^^^^^^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
-- ERROR:
File "XXXX", line 1
    input//valorEmReais= 2.96
    ^^^^^^^^^^^^^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 12:59:04)
-- CODE: 
(input valor Em Dolar Neozelandes= 5x 2.96)


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
-- ERROR:
File "XXXX", line 1
    (input valor Em Dolar Neozelandes= 5x 2.96)
                                       ^
SyntaxError: invalid decimal literal
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
-- ERROR:
File "XXXX", line 1
    (input valor Em Dolar Neozelandes= 5x 2.96)
                                       ^
SyntaxError: invalid decimal literal
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
-- ERROR:
File "XXXX", line 1
    (input valor Em Dolar Neozelandes= 5x 2.96)
                                       ^
SyntaxError: invalid decimal literal
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
-- ERROR:
File "XXXX", line 1
    (input valor Em Dolar Neozelandes= 5x 2.96)
                                       ^
SyntaxError: invalid decimal literal
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
-- ERROR:
File "XXXX", line 1
    (input valor Em Dolar Neozelandes= 5x 2.96)
                                       ^
SyntaxError: invalid decimal literal
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
-- ERROR:
File "XXXX", line 1
    (input valor Em Dolar Neozelandes= 5x 2.96)
                                       ^
SyntaxError: invalid decimal literal
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 12:48:02)
-- CODE: 
input // valorEmDolarNeozelandes x 2.96  // float


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
-- ERROR:
File "XXXX", line 1
    input // valorEmDolarNeozelandes x 2.96  // float
                                     ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
-- ERROR:
File "XXXX", line 1
    input // valorEmDolarNeozelandes x 2.96  // float
                                     ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
-- ERROR:
File "XXXX", line 1
    input // valorEmDolarNeozelandes x 2.96  // float
                                     ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
-- ERROR:
File "XXXX", line 1
    input // valorEmDolarNeozelandes x 2.96  // float
                                     ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
-- ERROR:
File "XXXX", line 1
    input // valorEmDolarNeozelandes x 2.96  // float
                                     ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
-- ERROR:
File "XXXX", line 1
    input // valorEmDolarNeozelandes x 2.96  // float
                                     ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 12:55:31)
-- CODE: 
input// valor Em Dolar Neozelandes= 5 x 2.96


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
-- ERROR:
File "XXXX", line 1
    input// valor Em Dolar Neozelandes= 5 x 2.96
                  ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
-- ERROR:
File "XXXX", line 1
    input// valor Em Dolar Neozelandes= 5 x 2.96
                  ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
-- ERROR:
File "XXXX", line 1
    input// valor Em Dolar Neozelandes= 5 x 2.96
                  ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
-- ERROR:
File "XXXX", line 1
    input// valor Em Dolar Neozelandes= 5 x 2.96
                  ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
-- ERROR:
File "XXXX", line 1
    input// valor Em Dolar Neozelandes= 5 x 2.96
                  ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
-- ERROR:
File "XXXX", line 1
    input// valor Em Dolar Neozelandes= 5 x 2.96
                  ^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:27:27)
-- CODE: 

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
---- user output:
None
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
---- user output:
None
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
---- user output:
None
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
---- user output:
None
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
---- user output:
None
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 12:34:10)
-- CODE: 
float//valor Em Neozelandes x 2.96

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
-- ERROR:
File "XXXX", line 1
    float//valor Em Neozelandes x 2.96
                 ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
-- ERROR:
File "XXXX", line 1
    float//valor Em Neozelandes x 2.96
                 ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
-- ERROR:
File "XXXX", line 1
    float//valor Em Neozelandes x 2.96
                 ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
-- ERROR:
File "XXXX", line 1
    float//valor Em Neozelandes x 2.96
                 ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
-- ERROR:
File "XXXX", line 1
    float//valor Em Neozelandes x 2.96
                 ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
-- ERROR:
File "XXXX", line 1
    float//valor Em Neozelandes x 2.96
                 ^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 12:37:37)
-- CODE: 
float// valorEmReais= 2.96


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
-- ERROR:
File "XXXX", line 1
    float// valorEmReais= 2.96
    ^^^^^^^^^^^^^^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
-- ERROR:
File "XXXX", line 1
    float// valorEmReais= 2.96
    ^^^^^^^^^^^^^^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
-- ERROR:
File "XXXX", line 1
    float// valorEmReais= 2.96
    ^^^^^^^^^^^^^^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
-- ERROR:
File "XXXX", line 1
    float// valorEmReais= 2.96
    ^^^^^^^^^^^^^^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
-- ERROR:
File "XXXX", line 1
    float// valorEmReais= 2.96
    ^^^^^^^^^^^^^^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
-- ERROR:
File "XXXX", line 1
    float// valorEmReais= 2.96
    ^^^^^^^^^^^^^^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 12:52:23)
-- CODE: 
input// valor Em Dolar Neozelandes x 2.96//float

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
-- ERROR:
File "XXXX", line 1
    input// valor Em Dolar Neozelandes x 2.96//float
                  ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
-- ERROR:
File "XXXX", line 1
    input// valor Em Dolar Neozelandes x 2.96//float
                  ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
-- ERROR:
File "XXXX", line 1
    input// valor Em Dolar Neozelandes x 2.96//float
                  ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
-- ERROR:
File "XXXX", line 1
    input// valor Em Dolar Neozelandes x 2.96//float
                  ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
-- ERROR:
File "XXXX", line 1
    input// valor Em Dolar Neozelandes x 2.96//float
                  ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
-- ERROR:
File "XXXX", line 1
    input// valor Em Dolar Neozelandes x 2.96//float
                  ^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:31:12)
-- CODE: 

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
---- user output:
None
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
---- user output:
None
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
---- user output:
None
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
---- user output:
None
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
---- user output:
None
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 12:46:48)
-- CODE: 
input// valorEmDolarNeozelandes x 2.96 //float//


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
-- ERROR:
File "XXXX", line 1
    input// valorEmDolarNeozelandes x 2.96 //float//
                                    ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
-- ERROR:
File "XXXX", line 1
    input// valorEmDolarNeozelandes x 2.96 //float//
                                    ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
-- ERROR:
File "XXXX", line 1
    input// valorEmDolarNeozelandes x 2.96 //float//
                                    ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
-- ERROR:
File "XXXX", line 1
    input// valorEmDolarNeozelandes x 2.96 //float//
                                    ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
-- ERROR:
File "XXXX", line 1
    input// valorEmDolarNeozelandes x 2.96 //float//
                                    ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
-- ERROR:
File "XXXX", line 1
    input// valorEmDolarNeozelandes x 2.96 //float//
                                    ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 12:30:56)
-- CODE: 

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
---- user output:
None
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
---- user output:
None
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
---- user output:
None
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
---- user output:
None
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
---- user output:
None
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
---- user output:
None
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 12:48:14)
-- CODE: 
input // valorEmDolarNeozelandes x 2.96 //float

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
-- ERROR:
File "XXXX", line 1
    input // valorEmDolarNeozelandes x 2.96 //float
                                     ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
-- ERROR:
File "XXXX", line 1
    input // valorEmDolarNeozelandes x 2.96 //float
                                     ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
-- ERROR:
File "XXXX", line 1
    input // valorEmDolarNeozelandes x 2.96 //float
                                     ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
-- ERROR:
File "XXXX", line 1
    input // valorEmDolarNeozelandes x 2.96 //float
                                     ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
-- ERROR:
File "XXXX", line 1
    input // valorEmDolarNeozelandes x 2.96 //float
                                     ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
-- ERROR:
File "XXXX", line 1
    input // valorEmDolarNeozelandes x 2.96 //float
                                     ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 12:40:53)
-- CODE: 
input//valorEmReais= 2.96
input// ValorEmDolarNeozelandes x 2.96 round(x,n)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
-- ERROR:
File "XXXX", line 1
    input//valorEmReais= 2.96
    ^^^^^^^^^^^^^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
-- ERROR:
File "XXXX", line 1
    input//valorEmReais= 2.96
    ^^^^^^^^^^^^^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
-- ERROR:
File "XXXX", line 1
    input//valorEmReais= 2.96
    ^^^^^^^^^^^^^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
-- ERROR:
File "XXXX", line 1
    input//valorEmReais= 2.96
    ^^^^^^^^^^^^^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
-- ERROR:
File "XXXX", line 1
    input//valorEmReais= 2.96
    ^^^^^^^^^^^^^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
-- ERROR:
File "XXXX", line 1
    input//valorEmReais= 2.96
    ^^^^^^^^^^^^^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 12:47:51)
-- CODE: 
input // valorEmDolarNeozelandes x 2.96 float //


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
-- ERROR:
File "XXXX", line 1
    input // valorEmDolarNeozelandes x 2.96 float //
                                     ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
-- ERROR:
File "XXXX", line 1
    input // valorEmDolarNeozelandes x 2.96 float //
                                     ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
-- ERROR:
File "XXXX", line 1
    input // valorEmDolarNeozelandes x 2.96 float //
                                     ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
-- ERROR:
File "XXXX", line 1
    input // valorEmDolarNeozelandes x 2.96 float //
                                     ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
-- ERROR:
File "XXXX", line 1
    input // valorEmDolarNeozelandes x 2.96 float //
                                     ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
-- ERROR:
File "XXXX", line 1
    input // valorEmDolarNeozelandes x 2.96 float //
                                     ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 12:33:40)
-- CODE: 
float valorEmNeozelandes x 2.96

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
-- ERROR:
File "XXXX", line 1
    float valorEmNeozelandes x 2.96
          ^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
-- ERROR:
File "XXXX", line 1
    float valorEmNeozelandes x 2.96
          ^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
-- ERROR:
File "XXXX", line 1
    float valorEmNeozelandes x 2.96
          ^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
-- ERROR:
File "XXXX", line 1
    float valorEmNeozelandes x 2.96
          ^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
-- ERROR:
File "XXXX", line 1
    float valorEmNeozelandes x 2.96
          ^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
-- ERROR:
File "XXXX", line 1
    float valorEmNeozelandes x 2.96
          ^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 12:37:56)
-- CODE: 
input//valorEmReais= 2.96


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
-- ERROR:
File "XXXX", line 1
    input//valorEmReais= 2.96
    ^^^^^^^^^^^^^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
-- ERROR:
File "XXXX", line 1
    input//valorEmReais= 2.96
    ^^^^^^^^^^^^^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
-- ERROR:
File "XXXX", line 1
    input//valorEmReais= 2.96
    ^^^^^^^^^^^^^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
-- ERROR:
File "XXXX", line 1
    input//valorEmReais= 2.96
    ^^^^^^^^^^^^^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
-- ERROR:
File "XXXX", line 1
    input//valorEmReais= 2.96
    ^^^^^^^^^^^^^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
-- ERROR:
File "XXXX", line 1
    input//valorEmReais= 2.96
    ^^^^^^^^^^^^^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 12:51:19)
-- CODE: 
input// valor Em Dolar Neozelandes x 2.96// 

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
-- ERROR:
File "XXXX", line 1
    input// valor Em Dolar Neozelandes x 2.96// 
                  ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
-- ERROR:
File "XXXX", line 1
    input// valor Em Dolar Neozelandes x 2.96// 
                  ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
-- ERROR:
File "XXXX", line 1
    input// valor Em Dolar Neozelandes x 2.96// 
                  ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
-- ERROR:
File "XXXX", line 1
    input// valor Em Dolar Neozelandes x 2.96// 
                  ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
-- ERROR:
File "XXXX", line 1
    input// valor Em Dolar Neozelandes x 2.96// 
                  ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
-- ERROR:
File "XXXX", line 1
    input// valor Em Dolar Neozelandes x 2.96// 
                  ^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:23:05)
-- CODE: 

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
---- user output:
None
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
---- user output:
None
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
---- user output:
None
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
---- user output:
None
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
---- user output:
None
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 12:52:47)
-- CODE: 
\\input// valor Em Dolar Neozelandes x 2.96 //float//


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
-- ERROR:
File "XXXX", line 1
    \\input// valor Em Dolar Neozelandes x 2.96 //float//
     ^
SyntaxError: unexpected character after line continuation character
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
-- ERROR:
File "XXXX", line 1
    \\input// valor Em Dolar Neozelandes x 2.96 //float//
     ^
SyntaxError: unexpected character after line continuation character
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
-- ERROR:
File "XXXX", line 1
    \\input// valor Em Dolar Neozelandes x 2.96 //float//
     ^
SyntaxError: unexpected character after line continuation character
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
-- ERROR:
File "XXXX", line 1
    \\input// valor Em Dolar Neozelandes x 2.96 //float//
     ^
SyntaxError: unexpected character after line continuation character
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
-- ERROR:
File "XXXX", line 1
    \\input// valor Em Dolar Neozelandes x 2.96 //float//
     ^
SyntaxError: unexpected character after line continuation character
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
-- ERROR:
File "XXXX", line 1
    \\input// valor Em Dolar Neozelandes x 2.96 //float//
     ^
SyntaxError: unexpected character after line continuation character
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 12:46:44)
-- CODE: 
input// valorEmDolarNeozelandes x 2.96 //float//


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
-- ERROR:
File "XXXX", line 1
    input// valorEmDolarNeozelandes x 2.96 //float//
                                    ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
-- ERROR:
File "XXXX", line 1
    input// valorEmDolarNeozelandes x 2.96 //float//
                                    ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
-- ERROR:
File "XXXX", line 1
    input// valorEmDolarNeozelandes x 2.96 //float//
                                    ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
-- ERROR:
File "XXXX", line 1
    input// valorEmDolarNeozelandes x 2.96 //float//
                                    ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
-- ERROR:
File "XXXX", line 1
    input// valorEmDolarNeozelandes x 2.96 //float//
                                    ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
-- ERROR:
File "XXXX", line 1
    input// valorEmDolarNeozelandes x 2.96 //float//
                                    ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 12:47:26)
-- CODE: 
\input/ valorEmDolarNeozelandes x 2.96 /float/


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
-- ERROR:
File "XXXX", line 1
    \input/ valorEmDolarNeozelandes x 2.96 /float/
     ^
SyntaxError: unexpected character after line continuation character
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
-- ERROR:
File "XXXX", line 1
    \input/ valorEmDolarNeozelandes x 2.96 /float/
     ^
SyntaxError: unexpected character after line continuation character
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
-- ERROR:
File "XXXX", line 1
    \input/ valorEmDolarNeozelandes x 2.96 /float/
     ^
SyntaxError: unexpected character after line continuation character
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
-- ERROR:
File "XXXX", line 1
    \input/ valorEmDolarNeozelandes x 2.96 /float/
     ^
SyntaxError: unexpected character after line continuation character
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
-- ERROR:
File "XXXX", line 1
    \input/ valorEmDolarNeozelandes x 2.96 /float/
     ^
SyntaxError: unexpected character after line continuation character
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
-- ERROR:
File "XXXX", line 1
    \input/ valorEmDolarNeozelandes x 2.96 /float/
     ^
SyntaxError: unexpected character after line continuation character
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 12:46:01)
-- CODE: 
input// valorEmDolarNeozelandes x 2.96 //float


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
-- ERROR:
File "XXXX", line 1
    input// valorEmDolarNeozelandes x 2.96 //float
                                    ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
-- ERROR:
File "XXXX", line 1
    input// valorEmDolarNeozelandes x 2.96 //float
                                    ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
-- ERROR:
File "XXXX", line 1
    input// valorEmDolarNeozelandes x 2.96 //float
                                    ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
-- ERROR:
File "XXXX", line 1
    input// valorEmDolarNeozelandes x 2.96 //float
                                    ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
-- ERROR:
File "XXXX", line 1
    input// valorEmDolarNeozelandes x 2.96 //float
                                    ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
-- ERROR:
File "XXXX", line 1
    input// valorEmDolarNeozelandes x 2.96 //float
                                    ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 12:47:25)
-- CODE: 
\input/ valorEmDolarNeozelandes x 2.96 /float/


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
-- ERROR:
File "XXXX", line 1
    \input/ valorEmDolarNeozelandes x 2.96 /float/
     ^
SyntaxError: unexpected character after line continuation character
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
-- ERROR:
File "XXXX", line 1
    \input/ valorEmDolarNeozelandes x 2.96 /float/
     ^
SyntaxError: unexpected character after line continuation character
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
-- ERROR:
File "XXXX", line 1
    \input/ valorEmDolarNeozelandes x 2.96 /float/
     ^
SyntaxError: unexpected character after line continuation character
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
-- ERROR:
File "XXXX", line 1
    \input/ valorEmDolarNeozelandes x 2.96 /float/
     ^
SyntaxError: unexpected character after line continuation character
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
-- ERROR:
File "XXXX", line 1
    \input/ valorEmDolarNeozelandes x 2.96 /float/
     ^
SyntaxError: unexpected character after line continuation character
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
-- ERROR:
File "XXXX", line 1
    \input/ valorEmDolarNeozelandes x 2.96 /float/
     ^
SyntaxError: unexpected character after line continuation character
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 12:40:57)
-- CODE: 
input//valorEmReais= 2.96
input// ValorEmDolarNeozelandes x 2.96 round(x,n)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
-- ERROR:
File "XXXX", line 1
    input//valorEmReais= 2.96
    ^^^^^^^^^^^^^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
-- ERROR:
File "XXXX", line 1
    input//valorEmReais= 2.96
    ^^^^^^^^^^^^^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
-- ERROR:
File "XXXX", line 1
    input//valorEmReais= 2.96
    ^^^^^^^^^^^^^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
-- ERROR:
File "XXXX", line 1
    input//valorEmReais= 2.96
    ^^^^^^^^^^^^^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
-- ERROR:
File "XXXX", line 1
    input//valorEmReais= 2.96
    ^^^^^^^^^^^^^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
-- ERROR:
File "XXXX", line 1
    input//valorEmReais= 2.96
    ^^^^^^^^^^^^^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 12:34:31)
-- CODE: 
float= valor Em Neozelandes x 2.96

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
-- ERROR:
File "XXXX", line 1
    float= valor Em Neozelandes x 2.96
                 ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
-- ERROR:
File "XXXX", line 1
    float= valor Em Neozelandes x 2.96
                 ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
-- ERROR:
File "XXXX", line 1
    float= valor Em Neozelandes x 2.96
                 ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
-- ERROR:
File "XXXX", line 1
    float= valor Em Neozelandes x 2.96
                 ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
-- ERROR:
File "XXXX", line 1
    float= valor Em Neozelandes x 2.96
                 ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
-- ERROR:
File "XXXX", line 1
    float= valor Em Neozelandes x 2.96
                 ^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 12:35:22)
-- CODE: 
input = valorEmNeozelandes x 2.96

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
-- ERROR:
File "XXXX", line 1
    input = valorEmNeozelandes x 2.96
                               ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
-- ERROR:
File "XXXX", line 1
    input = valorEmNeozelandes x 2.96
                               ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
-- ERROR:
File "XXXX", line 1
    input = valorEmNeozelandes x 2.96
                               ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
-- ERROR:
File "XXXX", line 1
    input = valorEmNeozelandes x 2.96
                               ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
-- ERROR:
File "XXXX", line 1
    input = valorEmNeozelandes x 2.96
                               ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
-- ERROR:
File "XXXX", line 1
    input = valorEmNeozelandes x 2.96
                               ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 12:26:14)
-- CODE: 

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
---- user output:
None
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
---- user output:
None
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
---- user output:
None
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
---- user output:
None
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
---- user output:
None
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
---- user output:
None
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:28:19)
-- CODE: 

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
---- user output:
None
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
---- user output:
None
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
---- user output:
None
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
---- user output:
None
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
---- user output:
None
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
